Revert "Fix spacing trevor brennan11"

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,42 @@
-Button{
-  margin: 25px;
-}
+
 
 .App {
   text-align: center;
   background-color: teal;
-  display: flex;
-  height: 100vh;
-  flex-flow: column;
+}
+
+Button{
+  margin: 25px;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.App-footer{
+  background-color: yellow;
+}
+
+.App-body{
+  height: 5000px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-  min-height: 50px;
-  position: fixed;
-  top: 0;
-  width: 100%;
+  min-height: 50h;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   background-color: darkblue;
 }
-
-.App-body{
-  background-color: teal;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 80px;
-}
-
-.App-footer{
-  background-color: yellow;
-  height: 50px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
 .App-details {
   min-height: 50h;
   display: flex;
@@ -46,19 +46,30 @@ Button{
   font-size: calc(10px + 2vmin);
   background-color: #a8e1f7;
 }
-
 .App-link {
   color: #61dafb;
 }
 
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .container{
-  margin: auto;
   background-color: blue;
   display:flex;
   justify-content: space-around;
   width: 80vw;
   max-width: 37.5em;
   padding: 3em 2.5em;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
   border-radius: 0.62em;
   box-shadow: 0 1.25em 1.8em rgba(8, 21, 65, 0.25);
 }
@@ -71,7 +82,6 @@ Button{
   margin: 20px 5px ;
   border-radius: 0.62em;
 }
-
 .basic-page-container {
   flex: 1; /* Expand to fill remaining space */
   overflow-y: auto; /* Add scrollbars if content exceeds height */
